@@ -35,3 +35,15 @@ June 4, 2014
 	general code formatting
 	
 	updated proposal to reflect addition of teamMembers field to the Player class 
+	
+June 9, 2014
+	Changed Player to implement Comparable. Player is comparable first by name then by increasing number of players
+	
+	Added a testComparePlayers() method to TestDriver. This method sorts the players generated by buildPlayersAndTeams()
+	making use of the newly implemented Comparable interface of the Player class.
+	
+	split logic of the testGenerateTeams() method in TestDriver into two methods, buildPlayersAndTeams() and printTeams().
+	testGenerateTeams() now calls these two methods. This enables the newly added testComparePlayers() method to use
+	the buildPlayersAndTeams() method.
+	
+	
